--- a/scss/3-molecules/_panel-image-holder.scss
+++ b/scss/3-molecules/_panel-image-holder.scss
@@ -10,8 +10,8 @@
     }
 
     img {
-        max-height: 80vh;
-        min-width: 40vh;
-        display: inline;
+        max-height: 100%;
+        max-width: 100%;
+        display: block;
     }
 }
